# archived-TileDB-FastQ

./: CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yaml
libtiledbfq/: CMakeLists.txt
libtiledbfq/cmake/: Superbuild.cmake
libtiledbfq/cmake/Modules/: FindZlib_EP.cmake
libtiledbfq/src/: CMakeLists.txt
libtiledbfq/src/cli/: tiledbfq.cc
libtiledbfq/src/read/: reader.cc  reader.h
libtiledbfq/src/utils/: bitmap.cc  bitmap.h  buffer.cc  buffer.h  utils.cc  utils.h
libtiledbfq/src/write/: fqfile.cc  fqfile.h  writer.cc  writer.h
libtiledbfq/test/: CMakeLists.txt
libtiledbfq/test/src/: unit-bitmap.cc  unit-fq-store.cc  unit-fqfile.cc
